# cyberdesk

./: .gitmodules  LICENSE
control-panel/: control-panel.kicad_pro
control-panel/extraFootprints.pretty/: LED_LiteOn_LTST-C195TGKRKT.kicad_mod
control-panel_firmware/: control-panel_firmware.ioc
firmware/: .clang-format
firmware/common-stuff/: StatusLed.hpp  sync.hpp
firmware/control-panel_firmware/: CMakeLists.txt
firmware/control-panel_firmware/cubemx/: control-panel_firmware.ioc
firmware/control-panel_firmware/cubemx/Core/Inc/: FreeRTOSConfig.h  main.h  stm32g0xx_hal_conf.h  stm32g0xx_it.h
firmware/control-panel_firmware/cubemx/Core/Src/: app_freertos.c  dma.c  fdcan.c  gpio.c  main.c  spi.c  stm32g0xx_hal_timebase_tim.c  stm32g0xx_it.c  tim.c
firmware/control-panel_firmware/cubemx/cmake/: gcc-arm-none-eabi.cmake
firmware/control-panel_firmware/cubemx/cmake/stm32cubemx/: CMakeLists.txt
firmware/control-panel_firmware/src/: Application.cxx  Application.hpp  CanMesssageSender.hpp  StateMachine.hpp
firmware/control-panel_firmware/src/encoder/: Encoder.hpp  EncoderManager.hpp
firmware/control-panel_firmware/src/led/: AddressableLedDriver.hpp  FeedbackLedBar.hpp  LedDataTypes.hpp
firmware/control-panel_firmware/src/led/animations/: FadingAnimation.hpp  LedAnimationBase.hpp  RainbowAnimation.hpp  ShowStatusAnimation.hpp  TestAllColorsAnimation.hpp
firmware/light-driver_firmware/: .gitattributes  .gitignore  CMakeLists.txt  light-driver_firmware.ioc
hardware/control-panel/: control-panel.kicad_pcb  control-panel.kicad_pro  control-panel.kicad_sch  extraSymbols.kicad_sym  (+2 more)
light-driver/: LED_lowSide_driver.kicad_sch  extraSymbols.kicad_sym  light-driver.kicad_pcb  light-driver.kicad_pro  light-driver.kicad_sch
(+33 files in other folders)
